--- a/package.json
+++ b/package.json
@@ -24,21 +24,25 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^9.0.0",
-    "@nestjs/mongoose": "^9.1.1",
-    "@nestjs/passport": "^9.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.0",
+    "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^6.0.1",
+    "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.1.4",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "mongoose": "^6.4.0",
+    "mongoose": "^5.13.0",
+    "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "save": "^2.5.0",
-    "typeorm": "^0.3.6"
+    "swagger-ui-express": "^4.0.0",
+    "typeorm": "^0.3.6",
+    "webpack": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
