fix_jwt_token_problem

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 MONGODB_URI='mongodb+srv://hanee:1234@nestcluster.mfklpdz.mongodb.net/cats?retryWrites=true&w=majority'
 
-PORT = 7070
+PORT = 8000
 
 MODE = 'dev'
+
+AWS_S3_ACCESS_KEY = "AKIARBHQHQOXITVLBKO6"
+AWS_S3_SECRET_KEY="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"
+AWS_S3_REGION="ap-northeast-2"
+AWS_S3_BUCKET_NAME="nestjsfirstb"
