--- a/package.json
+++ b/package.json
@@ -33,16 +33,15 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "mongoose": "^5.13.0",
-    "passport": "^0.4.0",
+    "mongoose": "^6.0.0",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "save": "^2.5.0",
     "swagger-ui-express": "^4.0.0",
-    "typeorm": "^0.3.6",
-    "webpack": "^5.0.0"
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
