--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ MODE = 'dev'
 
 JWT_SECRET='secret'
 
-AWS_S3_ACCESS_KEY = "AKIARBHQHQOXITVLBKO6"
-AWS_S3_SECRET_KEY = "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"
+AWS_S3_ACCESS_KEY = ""
+AWS_S3_SECRET_KEY = ""
 AWS_S3_REGION = "ap-northeast-2"
-AWS_S3_BUCKET_NAME = "nestjsfirstb"
+AWS_S3_BUCKET_NAME = ""
